# notebookize

./: .gitignore  README.md  __main__.py  demo.py  justfile  notebookize.py  pyproject.toml
.zed/: debug.json
tests/: demo.py  manual_test_jupyterlab.py  test_basic_extraction.py  test_class_methods.py  test_console_connection.py  test_file_watching.py  test_kernel.py  test_kernel_connection.py  test_kernel_existing.py  test_notebookize.py  test_open_features.py  test_preserve_spacing.py  test_return_transformers.py  test_round_trip.py  test_round_trip_property.py
