[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "notebookize"
authors = [{ name = "K.R. Zentner", email = "krzentner@gmail.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.4.7",
    "jupytext>=1.17.3",
    "pyzmq>=25.0.0",
    "ipykernel>=6.29.0",
    "jupyter-client>=8.6.0",
    "jupyter-console>=6.6.3",
]

[project.urls]
Home = "https://github.com/krzentner/notebookize"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[dependency-groups]
recommended = ["ipdb>=0.13.13"]
dev = [
    "flit",
    "pexpect",
    "pytest",
    "pytest-isolate",
    "ruff",
    "mypy",
    "types-setuptools",
]
